:memo: 타입추론 추가해봄